--- a/app/src/main/res/drawable/list_button.xml
+++ b/app/src/main/res/drawable/list_button.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:ignore="ExtraText">
 
-    <solid android:color="@color/gray_dark" />
+    <solid android:color="@color/background_color" />
     <size android:height="25dp"
         android:width="50dp"/>
     <corners android:radius="5dp"/>
