--- a/app/src/main/res/layout/base_layout.xml
+++ b/app/src/main/res/layout/base_layout.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/background_color"
+        android:background="@color/white"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/base_text"
         app:layout_constraintBottom_toTopOf="@id/navigation_menu"
