--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -22,7 +22,7 @@
         android:layout_marginLeft="10dp"/>
 
     <TextView
-        android:id="@+id/item_category"
+        android:id="@+id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="종목명"
@@ -40,7 +40,7 @@
         android:textSize="14sp"
         android:textColor="@color/brown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_category"
+        app:layout_constraintTop_toBottomOf="@id/item_name"
         android:layout_marginEnd="30dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
