--- a/app/src/main/res/layout/itembox.xml
+++ b/app/src/main/res/layout/itembox.xml
@@ -19,14 +19,14 @@
         android:layout_marginTop="15dp"/>
 
     <TextView
-        android:id="@+id/box_name"
+        android:id="@+id/box_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="종목명"
+        android:text="카테고리"
         android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="@color/mint"
-        app:layout_constraintTop_toTopOf="@id/box_button"
+        app:layout_constraintTop_toTopOf="@id/box_star_button"
         app:layout_constraintStart_toStartOf="@id/box_title" />
 
     <TextView
@@ -34,10 +34,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textColor="@color/brown"
-        app:layout_constraintEnd_toEndOf="@id/box_script"
-        app:layout_constraintTop_toBottomOf="@id/box_title"/>
+        app:layout_constraintStart_toStartOf="@id/box_title"
+        app:layout_constraintTop_toBottomOf="@id/box_name"/>
+
+    <TextView
+        android:id="@+id/box_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="종목명"
+        android:textStyle="normal"
+        android:textColor="@color/green"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/box_title"
+        app:layout_constraintStart_toStartOf="@id/box_title"/>
 
     <ImageButton
         android:id="@+id/box_star_button"
