--- a/app/src/main/res/layout/fragment_recommand.xml
+++ b/app/src/main/res/layout/fragment_recommand.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,6 +17,18 @@
         android:layout_margin="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_recommend_container"
+        android:layout_width="match_parent"
+        android:layout_height="324dp"
+        app:layout_constraintTop_toBottomOf="@id/rcm_text"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp">
+
+        <include layout="@layout/recommand_item_skeleton" />
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/rcm_recommend_page"
@@ -55,15 +68,29 @@
         app:layout_constraintTop_toBottomOf="@id/rcm_recommend_indicator"
         app:layout_constraintStart_toStartOf="@id/rcm_text"/>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/rcm_swiper"
+    <FrameLayout
+        android:id="@+id/rcm_frame"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rcm_text2"
-        android:background="@color/background_color"
-        android:orientation="vertical"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_rank_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <include layout="@layout/rank_item_skeleton" />
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/rcm_swiper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone" />
+    </FrameLayout>
+
 
     <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
         android:id="@+id/rcm_dots_indicator"
@@ -72,9 +99,9 @@
         app:dotsColor="@color/green"
         app:dotsSize="7dp"
         app:dotsSpacing="2dp"
-        app:layout_constraintBottom_toBottomOf="@id/rcm_swiper"
-        app:layout_constraintStart_toStartOf="@id/rcm_swiper"
-        app:layout_constraintEnd_toEndOf="@id/rcm_swiper"
+        app:layout_constraintBottom_toBottomOf="@id/rcm_frame"
+        app:layout_constraintStart_toStartOf="@id/rcm_frame"
+        app:layout_constraintEnd_toEndOf="@id/rcm_frame"
         android:layout_marginBottom="5dp"/>
 
 
