--- a/app/src/main/res/layout/rank_item.xml
+++ b/app/src/main/res/layout/rank_item.xml
@@ -49,6 +49,7 @@
         android:layout_marginStart="15dp"
         android:text="hh:mm"
         android:textSize="12sp"
+        android:layout_marginEnd="5dp"
         app:layout_constraintBottom_toBottomOf="@id/rank_views"
         app:layout_constraintEnd_toEndOf="parent" />
 
