--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -34,7 +34,7 @@
             android:background="@drawable/round_box"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
-            android:hint="Email"
+            android:hint="아이디"
             android:padding="12dp"/>
 
         <EditText
@@ -45,7 +45,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:layout_marginTop="15dp"
-            android:hint="Password"
+            android:hint="비밀번호"
             android:padding="12dp"/>
         <Button
             android:id="@+id/loginButton"
@@ -60,7 +60,7 @@
             android:textStyle="bold"
             android:textSize="18sp"
             android:textColor="@color/white"/>
-
+<!--
         <TextView
             android:id="@+id/forgot"
             android:layout_width="wrap_content"
@@ -69,6 +69,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             android:layout_marginTop="20dp"/>
+            -->
     </LinearLayout>
 
     <LinearLayout
