firebase 기반 login 이식
default_web_client_id 확인 필요

로그인 기능 정상 이식 완료

로그아웃 버튼 활성화

자동 로그인 기능 추가

--- a/app/src/main/res/layout/base_layout.xml
+++ b/app/src/main/res/layout/base_layout.xml
@@ -20,6 +20,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_gravity="center"/>
 
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/logout_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/base_text"
+        app:layout_constraintTop_toTopOf="@id/base_text"
+        android:layout_margin="5dp"/>
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/frame"
         android:layout_width="match_parent"
