--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -73,14 +73,18 @@
                 android:id="@+id/main_tab_company"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="종목"/>
+                android:text="기업"/>
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/main_tab_industry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="산업"/>
-
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/main_tab_minutes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="정기"/>
 
         </com.google.android.material.tabs.TabLayout>
 
